--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         <h1 id="lascouPerdiTudo">Bem-vindo ao site do detran</h1>
         <h3 id="eita"> Digite sua idade quando solicitada.</h3>
         <h4 id="aposta">digite seu estado quando solicitado.</h4>
-        
+        <img id="vi" src="" alt="imagem de exemplo">
+        <img id="te" scr="" alt="imagem de exemplo">
         <script src="script.js"></script>
     </body>
 </html>
